Compilador/Sintactico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL
    ID1
    ID2
    LIST
    NEGATIVO
    TYPE

Grammar

Rule 0     S' -> estructura
Rule 1     loop -> FOR ID0 IN iterable STEP NUMERO LLAVEI statements LLAVED PUNTOCOMA
Rule 2     funcionReservada -> ID0 PUNTO INSERT PARENTESISI NUMERO COMA bool PARENTESISD PUNTOCOMA
Rule 3     statements -> COMENTARIO statements
Rule 4     estructura -> confiCons globalVar main rutinas
Rule 5     statements -> empty
Rule 6     statements -> expression PUNTOCOMA statements
Rule 7     loop -> FOR ID0 IN iterable LLAVEI statements LLAVED PUNTOCOMA
Rule 8     funcionReservada -> ID0 PUNTO INSERT PARENTESISI valor COMA tipo COMA NUMERO PARENTESISD PUNTOCOMA
Rule 9     statements -> loop statements
Rule 10    statements -> asignacion statements
Rule 11    expression -> expression SUMA term
Rule 12    expression -> expression RESTA term
Rule 13    funcionReservada -> ID0 PUNTO INSERT PARENTESISI valor COMA NUMERO PARENTESISD PUNTOCOMA
Rule 14    main -> PROCEDURE MAIN PARENTESISI PARENTESISD LLAVEI statements LLAVED PUNTOCOMA
Rule 15    statements -> funcionReservada statements
Rule 16    iterable -> NUMERO
Rule 17    term -> term MULTIPLICACION factor
Rule 18    iterable -> ID0 conjunto
Rule 19    term -> term DIVISION factor
Rule 20    statements -> bifurcacion statements
Rule 21    term -> term DIVISIONE factor
Rule 22    rutinas -> rutina rutinas
Rule 23    statements -> rutina statements
Rule 24    funcionReservada -> ID0 PUNTO DEL PARENTESISI NUMERO PARENTESISD PUNTOCOMA
Rule 25    term -> term MODULO factor
Rule 26    asignacion -> ID0 ASIGNACION valor PUNTOCOMA
Rule 27    rutinas -> empty
Rule 28    term -> term EXPONENCIAL factor
Rule 29    funcionReservada -> ID0 PUNTO DEL PARENTESISI NUMERO COMA tipo PARENTESISD PUNTOCOMA
Rule 30    expression -> RESTA term
Rule 31    rutina -> PROCEDURE ID0 PARENTESISI parametros PARENTESISD LLAVEI statements LLAVED PUNTOCOMA
Rule 32    expression -> term
Rule 33    funcionReservada -> LEN PARENTESISI ID0 PARENTESISD PUNTOCOMA
Rule 34    term -> factor
Rule 35    funcionReservada -> ID0 conjunto PUNTO NEG PUNTOCOMA
Rule 36    factor -> NUMERO
Rule 37    asignacion -> ID0 COMA asignacion
Rule 38    factor -> PARENTESISI expression PARENTESISD
Rule 39    empty -> <empty>
Rule 40    funcionReservada -> ID0 conjunto PUNTO T PUNTOCOMA
Rule 41    asignacion -> ID0 ASIGNACION PARENTESISCI PARENTESISCD PUNTOCOMA
Rule 42    parametros -> ID0
Rule 43    parametros -> empty
Rule 44    parametros -> ID0 COMA parametros
Rule 45    asignacion -> ID0 ASIGNACION funcionReservada PUNTOCOMA
Rule 46    as -> ID0 ASIGNACION valor PUNTOCOMA
Rule 47    funcionReservada -> ID0 conjunto PUNTO F PUNTOCOMA
Rule 48    asignacion -> ID0 ASIGNACION RANGE PARENTESISI NUMERO COMA bool PARENTESISD PUNTOCOMA
Rule 49    globalVar -> as globalVar
Rule 50    globalVar -> empty
Rule 51    confiCons -> timer rangoTimer dimFilas dimCol cubo
Rule 52    asignacion -> ID0 conjunto ASIGNACION valor PUNTOCOMA
Rule 53    funcionReservada -> BLINK PARENTESISI ID0 conjunto COMA NUMERO COMA rango COMA bool PARENTESISD PUNTOCOMA
Rule 54    timer -> TIMER ASIGNACION NUMERO PUNTOCOMA
Rule 55    rangoTimer -> RANGOTIMER ASIGNACION rango PUNTOCOMA
Rule 56    dimFilas -> DIMFILAS ASIGNACION NUMERO PUNTOCOMA
Rule 57    funcionReservada -> BLINK PARENTESISI ID0 conjunto COMA bool PARENTESISD PUNTOCOMA
Rule 58    asignacion -> ID0 conjunto ASIGNACION valor_b PUNTOCOMA
Rule 59    dimCol -> DIMCOLUMNAS ASIGNACION NUMERO PUNTOCOMA
Rule 60    cubo -> CUBO ASIGNACION PARENTESISCI valor PARENTESISCD PUNTOCOMA
Rule 61    funcionReservada -> DELAY PARENTESISI PARENTESISD PUNTOCOMA
Rule 62    asignacion -> ID0 ASIGNACION valor_b PUNTOCOMA
Rule 63    funcionReservada -> DELAY PARENTESISI NUMERO COMA rango PARENTESISD PUNTOCOMA
Rule 64    funcionReservada -> ID0 PUNTO SHAPEF
Rule 65    bifurcacion -> IF ID0 conjunto operador valor_b LLAVEI statements LLAVED PUNTOCOMA
Rule 66    funcionReservada -> ID0 PUNTO SHAPEC
Rule 67    operador -> COMPARACION
Rule 68    operador -> DISTINTOQUE
Rule 69    operador -> MENORQUE
Rule 70    operador -> MAYORQUE
Rule 71    operador -> MAYORIGUALQUE
Rule 72    operador -> MENORIGUALQUE
Rule 73    funcionReservada -> ID0 PUNTO SHAPEA
Rule 74    valor -> NUMERO
Rule 75    valor -> bool
Rule 76    funcionReservada -> CALL ID0 PARENTESISI parametrosFuncion PARENTESISD PUNTOCOMA
Rule 77    valor -> valor valor2
Rule 78    valor2 -> COMA valor
Rule 79    rango -> SEG
Rule 80    rango -> MIN
Rule 81    rango -> MIL
Rule 82    valor -> lista
Rule 83    tipo -> NUMERO
Rule 84    valor_b -> ID0 conjunto
Rule 85    conjunto -> PARENTESISCI indice DOSPUNTOS indice PARENTESISCD
Rule 86    valor_b -> NUMERO
Rule 87    valor_b -> bool
Rule 88    valor_b -> expression
Rule 89    conjunto -> PARENTESISCI DOSPUNTOS indice PARENTESISCD
Rule 90    conjunto -> PARENTESISCI indice PARENTESISCD
Rule 91    bool -> TRUE
Rule 92    bool -> FALSE
Rule 93    conjunto -> PARENTESISCI indice PARENTESISCD PARENTESISCI indice PARENTESISCD
Rule 94    comentario_opcional -> COMENTARIO
Rule 95    comentario_opcional -> empty
Rule 96    conjunto -> empty
Rule 97    lista -> PARENTESISCI valor PARENTESISCD
Rule 98    rango_matriz -> PARENTESISCI indice PARENTESISCD
Rule 99    conjunto -> PARENTESISCI indice COMA indice PARENTESISCD
Rule 100   conjunto -> PARENTESISCI DOSPUNTOS COMA indice PARENTESISCD
Rule 101   conjunto -> PARENTESISCI indice PARENTESISCD PARENTESISCI indice PARENTESISCD PARENTESISCI indice PARENTESISCD
Rule 102   parametrosFuncion -> ID0
Rule 103   parametrosFuncion -> NUMERO
Rule 104   parametrosFuncion -> empty
Rule 105   parametrosFuncion -> ID0 COMA parametrosFuncion
Rule 106   parametrosFuncion -> NUMERO COMA parametrosFuncion
Rule 107   indice -> NUMERO
Rule 108   indice -> ID0

Terminals, with rules where they appear

ASIGNACION           : 26 41 45 46 48 52 54 55 56 58 59 60 62
BLINK                : 53 57
BOOL                 : 
CALL                 : 76
COMA                 : 2 8 8 13 29 37 44 48 53 53 53 57 63 78 99 100 105 106
COMENTARIO           : 3 94
COMPARACION          : 67
CUBO                 : 60
DEL                  : 24 29
DELAY                : 61 63
DIMCOLUMNAS          : 59
DIMFILAS             : 56
DISTINTOQUE          : 68
DIVISION             : 19
DIVISIONE            : 21
DOSPUNTOS            : 85 89 100
EXPONENCIAL          : 28
F                    : 47
FALSE                : 92
FOR                  : 1 7
ID0                  : 1 2 7 8 13 18 24 26 29 31 33 35 37 40 41 42 44 45 46 47 48 52 53 57 58 62 64 65 66 73 76 84 102 105 108
ID1                  : 
ID2                  : 
IF                   : 65
IN                   : 1 7
INSERT               : 2 8 13
LEN                  : 33
LIST                 : 
LLAVED               : 1 7 14 31 65
LLAVEI               : 1 7 14 31 65
MAIN                 : 14
MAYORIGUALQUE        : 71
MAYORQUE             : 70
MENORIGUALQUE        : 72
MENORQUE             : 69
MIL                  : 81
MIN                  : 80
MODULO               : 25
MULTIPLICACION       : 17
NEG                  : 35
NEGATIVO             : 
NUMERO               : 1 2 8 13 16 24 29 36 48 53 54 56 59 63 74 83 86 103 106 107
PARENTESISCD         : 41 60 85 89 90 93 93 97 98 99 100 101 101 101
PARENTESISCI         : 41 60 85 89 90 93 93 97 98 99 100 101 101 101
PARENTESISD          : 2 8 13 14 24 29 31 33 38 48 53 57 61 63 76
PARENTESISI          : 2 8 13 14 24 29 31 33 38 48 53 57 61 63 76
PROCEDURE            : 14 31
PUNTO                : 2 8 13 24 29 35 40 47 64 66 73
PUNTOCOMA            : 1 2 6 7 8 13 14 24 26 29 31 33 35 40 41 45 46 47 48 52 53 54 55 56 57 58 59 60 61 62 63 65 76
RANGE                : 48
RANGOTIMER           : 55
RESTA                : 12 30
SEG                  : 79
SHAPEA               : 73
SHAPEC               : 66
SHAPEF               : 64
STEP                 : 1
SUMA                 : 11
T                    : 40
TIMER                : 54
TRUE                 : 91
TYPE                 : 
error                : 

Nonterminals, with rules where they appear

as                   : 49
asignacion           : 10 37
bifurcacion          : 20
bool                 : 2 48 53 57 75 87
comentario_opcional  : 
confiCons            : 4
conjunto             : 18 35 40 47 52 53 57 58 65 84
cubo                 : 51
dimCol               : 51
dimFilas             : 51
empty                : 5 27 43 50 95 96 104
estructura           : 0
expression           : 6 11 12 38 88
factor               : 17 19 21 25 28 34
funcionReservada     : 15 45
globalVar            : 4 49
indice               : 85 85 89 90 93 93 98 99 99 100 101 101 101
iterable             : 1 7
lista                : 82
loop                 : 9
main                 : 4
operador             : 65
parametros           : 31 44
parametrosFuncion    : 76 105 106
rango                : 53 55 63
rangoTimer           : 51
rango_matriz         : 
rutina               : 22 23
rutinas              : 4 22
statements           : 1 3 6 7 9 10 14 15 20 23 31 65
term                 : 11 12 17 19 21 25 28 30 32
timer                : 51
tipo                 : 8 29
valor                : 8 13 26 46 52 60 77 78 97
valor2               : 77
valor_b              : 58 62 65

Parsing method: LALR

state 0

    (0) S' -> . estructura
    (4) estructura -> . confiCons globalVar main rutinas
    (51) confiCons -> . timer rangoTimer dimFilas dimCol cubo
    (54) timer -> . TIMER ASIGNACION NUMERO PUNTOCOMA

    TIMER           shift and go to state 4

    estructura                     shift and go to state 1
    confiCons                      shift and go to state 2
    timer                          shift and go to state 3

state 1

    (0) S' -> estructura .



state 2

    (4) estructura -> confiCons . globalVar main rutinas
    (49) globalVar -> . as globalVar
    (50) globalVar -> . empty
    (46) as -> . ID0 ASIGNACION valor PUNTOCOMA
    (39) empty -> .

    ID0             shift and go to state 8
    PROCEDURE       reduce using rule 39 (empty -> .)

    globalVar                      shift and go to state 5
    as                             shift and go to state 6
    empty                          shift and go to state 7

state 3

    (51) confiCons -> timer . rangoTimer dimFilas dimCol cubo
    (55) rangoTimer -> . RANGOTIMER ASIGNACION rango PUNTOCOMA

    RANGOTIMER      shift and go to state 10

    rangoTimer                     shift and go to state 9

state 4

    (54) timer -> TIMER . ASIGNACION NUMERO PUNTOCOMA

    ASIGNACION      shift and go to state 11


state 5

    (4) estructura -> confiCons globalVar . main rutinas
    (14) main -> . PROCEDURE MAIN PARENTESISI PARENTESISD LLAVEI statements LLAVED PUNTOCOMA

    PROCEDURE       shift and go to state 13

    main                           shift and go to state 12

state 6

    (49) globalVar -> as . globalVar
    (49) globalVar -> . as globalVar
    (50) globalVar -> . empty
    (46) as -> . ID0 ASIGNACION valor PUNTOCOMA
    (39) empty -> .

    ID0             shift and go to state 8
    PROCEDURE       reduce using rule 39 (empty -> .)

    as                             shift and go to state 6
    globalVar                      shift and go to state 14
    empty                          shift and go to state 7

state 7

    (50) globalVar -> empty .

    PROCEDURE       reduce using rule 50 (globalVar -> empty .)


state 8

    (46) as -> ID0 . ASIGNACION valor PUNTOCOMA

    ASIGNACION      shift and go to state 15


state 9

    (51) confiCons -> timer rangoTimer . dimFilas dimCol cubo
    (56) dimFilas -> . DIMFILAS ASIGNACION NUMERO PUNTOCOMA

    DIMFILAS        shift and go to state 17

    dimFilas                       shift and go to state 16

state 10

    (55) rangoTimer -> RANGOTIMER . ASIGNACION rango PUNTOCOMA

    ASIGNACION      shift and go to state 18


state 11

    (54) timer -> TIMER ASIGNACION . NUMERO PUNTOCOMA

    NUMERO          shift and go to state 19


state 12

    (4) estructura -> confiCons globalVar main . rutinas
    (22) rutinas -> . rutina rutinas
    (27) rutinas -> . empty
    (31) rutina -> . PROCEDURE ID0 PARENTESISI parametros PARENTESISD LLAVEI statements LLAVED PUNTOCOMA
    (39) empty -> .

    PROCEDURE       shift and go to state 23
    $end            reduce using rule 39 (empty -> .)

    rutinas                        shift and go to state 20
    rutina                         shift and go to state 21
    empty                          shift and go to state 22

state 13

    (14) main -> PROCEDURE . MAIN PARENTESISI PARENTESISD LLAVEI statements LLAVED PUNTOCOMA

    MAIN            shift and go to state 24


state 14

    (49) globalVar -> as globalVar .

    PROCEDURE       reduce using rule 49 (globalVar -> as globalVar .)


state 15

    (46) as -> ID0 ASIGNACION . valor PUNTOCOMA
    (74) valor -> . NUMERO
    (75) valor -> . bool
    (77) valor -> . valor valor2
    (82) valor -> . lista
    (91) bool -> . TRUE
    (92) bool -> . FALSE
    (97) lista -> . PARENTESISCI valor PARENTESISCD

    NUMERO          shift and go to state 26
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    PARENTESISCI    shift and go to state 31

    valor                          shift and go to state 25
    bool                           shift and go to state 27
    lista                          shift and go to state 28

state 16

    (51) confiCons -> timer rangoTimer dimFilas . dimCol cubo
    (59) dimCol -> . DIMCOLUMNAS ASIGNACION NUMERO PUNTOCOMA

    DIMCOLUMNAS     shift and go to state 33

    dimCol                         shift and go to state 32

state 17

    (56) dimFilas -> DIMFILAS . ASIGNACION NUMERO PUNTOCOMA

    ASIGNACION      shift and go to state 34


state 18

    (55) rangoTimer -> RANGOTIMER ASIGNACION . rango PUNTOCOMA
    (79) rango -> . SEG
    (80) rango -> . MIN
    (81) rango -> . MIL

    SEG             shift and go to state 36
    MIN             shift and go to state 37
    MIL             shift and go to state 38

    rango                          shift and go to state 35

state 19

    (54) timer -> TIMER ASIGNACION NUMERO . PUNTOCOMA

    PUNTOCOMA       shift and go to state 39


state 20

    (4) estructura -> confiCons globalVar main rutinas .

    $end            reduce using rule 4 (estructura -> confiCons globalVar main rutinas .)


state 21

    (22) rutinas -> rutina . rutinas
    (22) rutinas -> . rutina rutinas
    (27) rutinas -> . empty
    (31) rutina -> . PROCEDURE ID0 PARENTESISI parametros PARENTESISD LLAVEI statements LLAVED PUNTOCOMA
    (39) empty -> .

    PROCEDURE       shift and go to state 23
    $end            reduce using rule 39 (empty -> .)

    rutina                         shift and go to state 21
    rutinas                        shift and go to state 40
    empty                          shift and go to state 22

state 22

    (27) rutinas -> empty .

    $end            reduce using rule 27 (rutinas -> empty .)


state 23

    (31) rutina -> PROCEDURE . ID0 PARENTESISI parametros PARENTESISD LLAVEI statements LLAVED PUNTOCOMA

    ID0             shift and go to state 41


state 24

    (14) main -> PROCEDURE MAIN . PARENTESISI PARENTESISD LLAVEI statements LLAVED PUNTOCOMA

    PARENTESISI     shift and go to state 42


state 25

    (46) as -> ID0 ASIGNACION valor . PUNTOCOMA
    (77) valor -> valor . valor2
    (78) valor2 -> . COMA valor

    PUNTOCOMA       shift and go to state 43
    COMA            shift and go to state 45

    valor2                         shift and go to state 44

state 26

    (74) valor -> NUMERO .

    PUNTOCOMA       reduce using rule 74 (valor -> NUMERO .)
    COMA            reduce using rule 74 (valor -> NUMERO .)
    PARENTESISCD    reduce using rule 74 (valor -> NUMERO .)


state 27

    (75) valor -> bool .

    PUNTOCOMA       reduce using rule 75 (valor -> bool .)
    COMA            reduce using rule 75 (valor -> bool .)
    PARENTESISCD    reduce using rule 75 (valor -> bool .)


state 28

    (82) valor -> lista .

    PUNTOCOMA       reduce using rule 82 (valor -> lista .)
    COMA            reduce using rule 82 (valor -> lista .)
    PARENTESISCD    reduce using rule 82 (valor -> lista .)


state 29

    (91) bool -> TRUE .

    PUNTOCOMA       reduce using rule 91 (bool -> TRUE .)
    COMA            reduce using rule 91 (bool -> TRUE .)
    PARENTESISCD    reduce using rule 91 (bool -> TRUE .)
    LLAVEI          reduce using rule 91 (bool -> TRUE .)
    PARENTESISD     reduce using rule 91 (bool -> TRUE .)


state 30

    (92) bool -> FALSE .

    PUNTOCOMA       reduce using rule 92 (bool -> FALSE .)
    COMA            reduce using rule 92 (bool -> FALSE .)
    PARENTESISCD    reduce using rule 92 (bool -> FALSE .)
    LLAVEI          reduce using rule 92 (bool -> FALSE .)
    PARENTESISD     reduce using rule 92 (bool -> FALSE .)


state 31

    (97) lista -> PARENTESISCI . valor PARENTESISCD
    (74) valor -> . NUMERO
    (75) valor -> . bool
    (77) valor -> . valor valor2
    (82) valor -> . lista
    (91) bool -> . TRUE
    (92) bool -> . FALSE
    (97) lista -> . PARENTESISCI valor PARENTESISCD

    NUMERO          shift and go to state 26
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    PARENTESISCI    shift and go to state 31

    valor                          shift and go to state 46
    bool                           shift and go to state 27
    lista                          shift and go to state 28

state 32

    (51) confiCons -> timer rangoTimer dimFilas dimCol . cubo
    (60) cubo -> . CUBO ASIGNACION PARENTESISCI valor PARENTESISCD PUNTOCOMA

    CUBO            shift and go to state 48

    cubo                           shift and go to state 47

state 33

    (59) dimCol -> DIMCOLUMNAS . ASIGNACION NUMERO PUNTOCOMA

    ASIGNACION      shift and go to state 49


state 34

    (56) dimFilas -> DIMFILAS ASIGNACION . NUMERO PUNTOCOMA

    NUMERO          shift and go to state 50


state 35

    (55) rangoTimer -> RANGOTIMER ASIGNACION rango . PUNTOCOMA

    PUNTOCOMA       shift and go to state 51


state 36

    (79) rango -> SEG .

    PUNTOCOMA       reduce using rule 79 (rango -> SEG .)
    PARENTESISD     reduce using rule 79 (rango -> SEG .)
    COMA            reduce using rule 79 (rango -> SEG .)


state 37

    (80) rango -> MIN .

    PUNTOCOMA       reduce using rule 80 (rango -> MIN .)
    PARENTESISD     reduce using rule 80 (rango -> MIN .)
    COMA            reduce using rule 80 (rango -> MIN .)


state 38

    (81) rango -> MIL .

    PUNTOCOMA       reduce using rule 81 (rango -> MIL .)
    PARENTESISD     reduce using rule 81 (rango -> MIL .)
    COMA            reduce using rule 81 (rango -> MIL .)


state 39

    (54) timer -> TIMER ASIGNACION NUMERO PUNTOCOMA .

    RANGOTIMER      reduce using rule 54 (timer -> TIMER ASIGNACION NUMERO PUNTOCOMA .)


state 40

    (22) rutinas -> rutina rutinas .

    $end            reduce using rule 22 (rutinas -> rutina rutinas .)


state 41

    (31) rutina -> PROCEDURE ID0 . PARENTESISI parametros PARENTESISD LLAVEI statements LLAVED PUNTOCOMA

    PARENTESISI     shift and go to state 52


state 42

    (14) main -> PROCEDURE MAIN PARENTESISI . PARENTESISD LLAVEI statements LLAVED PUNTOCOMA

    PARENTESISD     shift and go to state 53


state 43

    (46) as -> ID0 ASIGNACION valor PUNTOCOMA .

    ID0             reduce using rule 46 (as -> ID0 ASIGNACION valor PUNTOCOMA .)
    PROCEDURE       reduce using rule 46 (as -> ID0 ASIGNACION valor PUNTOCOMA .)


state 44

    (77) valor -> valor valor2 .

    PUNTOCOMA       reduce using rule 77 (valor -> valor valor2 .)
    COMA            reduce using rule 77 (valor -> valor valor2 .)
    PARENTESISCD    reduce using rule 77 (valor -> valor valor2 .)


state 45

    (78) valor2 -> COMA . valor
    (74) valor -> . NUMERO
    (75) valor -> . bool
    (77) valor -> . valor valor2
    (82) valor -> . lista
    (91) bool -> . TRUE
    (92) bool -> . FALSE
    (97) lista -> . PARENTESISCI valor PARENTESISCD

    NUMERO          shift and go to state 26
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    PARENTESISCI    shift and go to state 31

    valor                          shift and go to state 54
    bool                           shift and go to state 27
    lista                          shift and go to state 28

state 46

    (97) lista -> PARENTESISCI valor . PARENTESISCD
    (77) valor -> valor . valor2
    (78) valor2 -> . COMA valor

    PARENTESISCD    shift and go to state 55
    COMA            shift and go to state 45

    valor2                         shift and go to state 44

state 47

    (51) confiCons -> timer rangoTimer dimFilas dimCol cubo .

    ID0             reduce using rule 51 (confiCons -> timer rangoTimer dimFilas dimCol cubo .)
    PROCEDURE       reduce using rule 51 (confiCons -> timer rangoTimer dimFilas dimCol cubo .)


state 48

    (60) cubo -> CUBO . ASIGNACION PARENTESISCI valor PARENTESISCD PUNTOCOMA

    ASIGNACION      shift and go to state 56


state 49

    (59) dimCol -> DIMCOLUMNAS ASIGNACION . NUMERO PUNTOCOMA

    NUMERO          shift and go to state 57


state 50

    (56) dimFilas -> DIMFILAS ASIGNACION NUMERO . PUNTOCOMA

    PUNTOCOMA       shift and go to state 58


state 51

    (55) rangoTimer -> RANGOTIMER ASIGNACION rango PUNTOCOMA .

    DIMFILAS        reduce using rule 55 (rangoTimer -> RANGOTIMER ASIGNACION rango PUNTOCOMA .)


state 52

    (31) rutina -> PROCEDURE ID0 PARENTESISI . parametros PARENTESISD LLAVEI statements LLAVED PUNTOCOMA
    (42) parametros -> . ID0
    (43) parametros -> . empty
    (44) parametros -> . ID0 COMA parametros
    (39) empty -> .

    ID0             shift and go to state 59
    PARENTESISD     reduce using rule 39 (empty -> .)

    parametros                     shift and go to state 60
    empty                          shift and go to state 61

state 53

    (14) main -> PROCEDURE MAIN PARENTESISI PARENTESISD . LLAVEI statements LLAVED PUNTOCOMA

    LLAVEI          shift and go to state 62


state 54

    (78) valor2 -> COMA valor .
    (77) valor -> valor . valor2
    (78) valor2 -> . COMA valor

  ! shift/reduce conflict for COMA resolved as shift
    PUNTOCOMA       reduce using rule 78 (valor2 -> COMA valor .)
    PARENTESISCD    reduce using rule 78 (valor2 -> COMA valor .)
    COMA            shift and go to state 45

  ! COMA            [ reduce using rule 78 (valor2 -> COMA valor .) ]

    valor2                         shift and go to state 44

state 55

    (97) lista -> PARENTESISCI valor PARENTESISCD .

    PUNTOCOMA       reduce using rule 97 (lista -> PARENTESISCI valor PARENTESISCD .)
    COMA            reduce using rule 97 (lista -> PARENTESISCI valor PARENTESISCD .)
    PARENTESISCD    reduce using rule 97 (lista -> PARENTESISCI valor PARENTESISCD .)


state 56

    (60) cubo -> CUBO ASIGNACION . PARENTESISCI valor PARENTESISCD PUNTOCOMA

    PARENTESISCI    shift and go to state 63


state 57

    (59) dimCol -> DIMCOLUMNAS ASIGNACION NUMERO . PUNTOCOMA

    PUNTOCOMA       shift and go to state 64


state 58

    (56) dimFilas -> DIMFILAS ASIGNACION NUMERO PUNTOCOMA .

    DIMCOLUMNAS     reduce using rule 56 (dimFilas -> DIMFILAS ASIGNACION NUMERO PUNTOCOMA .)


state 59

    (42) parametros -> ID0 .
    (44) parametros -> ID0 . COMA parametros

    PARENTESISD     reduce using rule 42 (parametros -> ID0 .)
    COMA            shift and go to state 65


state 60

    (31) rutina -> PROCEDURE ID0 PARENTESISI parametros . PARENTESISD LLAVEI statements LLAVED PUNTOCOMA

    PARENTESISD     shift and go to state 66


state 61

    (43) parametros -> empty .

    PARENTESISD     reduce using rule 43 (parametros -> empty .)


state 62

    (14) main -> PROCEDURE MAIN PARENTESISI PARENTESISD LLAVEI . statements LLAVED PUNTOCOMA
    (3) statements -> . COMENTARIO statements
    (5) statements -> . empty
    (6) statements -> . expression PUNTOCOMA statements
    (9) statements -> . loop statements
    (10) statements -> . asignacion statements
    (15) statements -> . funcionReservada statements
    (20) statements -> . bifurcacion statements
    (23) statements -> . rutina statements
    (39) empty -> .
    (11) expression -> . expression SUMA term
    (12) expression -> . expression RESTA term
    (30) expression -> . RESTA term
    (32) expression -> . term
    (1) loop -> . FOR ID0 IN iterable STEP NUMERO LLAVEI statements LLAVED PUNTOCOMA
    (7) loop -> . FOR ID0 IN iterable LLAVEI statements LLAVED PUNTOCOMA
    (26) asignacion -> . ID0 ASIGNACION valor PUNTOCOMA
    (37) asignacion -> . ID0 COMA asignacion
    (41) asignacion -> . ID0 ASIGNACION PARENTESISCI PARENTESISCD PUNTOCOMA
    (45) asignacion -> . ID0 ASIGNACION funcionReservada PUNTOCOMA
    (48) asignacion -> . ID0 ASIGNACION RANGE PARENTESISI NUMERO COMA bool PARENTESISD PUNTOCOMA
    (52) asignacion -> . ID0 conjunto ASIGNACION valor PUNTOCOMA
    (58) asignacion -> . ID0 conjunto ASIGNACION valor_b PUNTOCOMA
    (62) asignacion -> . ID0 ASIGNACION valor_b PUNTOCOMA
    (2) funcionReservada -> . ID0 PUNTO INSERT PARENTESISI NUMERO COMA bool PARENTESISD PUNTOCOMA
    (8) funcionReservada -> . ID0 PUNTO INSERT PARENTESISI valor COMA tipo COMA NUMERO PARENTESISD PUNTOCOMA
    (13) funcionReservada -> . ID0 PUNTO INSERT PARENTESISI valor COMA NUMERO PARENTESISD PUNTOCOMA
    (24) funcionReservada -> . ID0 PUNTO DEL PARENTESISI NUMERO PARENTESISD PUNTOCOMA
    (29) funcionReservada -> . ID0 PUNTO DEL PARENTESISI NUMERO COMA tipo PARENTESISD PUNTOCOMA
    (33) funcionReservada -> . LEN PARENTESISI ID0 PARENTESISD PUNTOCOMA
    (35) funcionReservada -> . ID0 conjunto PUNTO NEG PUNTOCOMA
    (40) funcionReservada -> . ID0 conjunto PUNTO T PUNTOCOMA
    (47) funcionReservada -> . ID0 conjunto PUNTO F PUNTOCOMA
    (53) funcionReservada -> . BLINK PARENTESISI ID0 conjunto COMA NUMERO COMA rango COMA bool PARENTESISD PUNTOCOMA
    (57) funcionReservada -> . BLINK PARENTESISI ID0 conjunto COMA bool PARENTESISD PUNTOCOMA
    (61) funcionReservada -> . DELAY PARENTESISI PARENTESISD PUNTOCOMA
    (63) funcionReservada -> . DELAY PARENTESISI NUMERO COMA rango PARENTESISD PUNTOCOMA
    (64) funcionReservada -> . ID0 PUNTO SHAPEF
    (66) funcionReservada -> . ID0 PUNTO SHAPEC
    (73) funcionReservada -> . ID0 PUNTO SHAPEA
    (76) funcionReservada -> . CALL ID0 PARENTESISI parametrosFuncion PARENTESISD PUNTOCOMA
    (65) bifurcacion -> . IF ID0 conjunto operador valor_b LLAVEI statements LLAVED PUNTOCOMA
    (31) rutina -> . PROCEDURE ID0 PARENTESISI parametros PARENTESISD LLAVEI statements LLAVED PUNTOCOMA
    (17) term -> . term MULTIPLICACION factor
    (19) term -> . term DIVISION factor
    (21) term -> . term DIVISIONE factor
    (25) term -> . term MODULO factor
    (28) term -> . term EXPONENCIAL factor
    (34) term -> . factor
    (36) factor -> . NUMERO
    (38) factor -> . PARENTESISI expression PARENTESISD

    COMENTARIO      shift and go to state 69
    LLAVED          reduce using rule 39 (empty -> .)
    RESTA           shift and go to state 78
    FOR             shift and go to state 79
    ID0             shift and go to state 80
    LEN             shift and go to state 82
    BLINK           shift and go to state 83
    DELAY           shift and go to state 84
    CALL            shift and go to state 85
    IF              shift and go to state 86
    PROCEDURE       shift and go to state 23
    NUMERO          shift and go to state 81
    PARENTESISI     shift and go to state 67

    statements                     shift and go to state 68
    empty                          shift and go to state 70
    expression                     shift and go to state 71
    loop                           shift and go to state 72
    asignacion                     shift and go to state 73
    funcionReservada               shift and go to state 74
    bifurcacion                    shift and go to state 75
    rutina                         shift and go to state 76
    term                           shift and go to state 77
    factor                         shift and go to state 87

state 63

    (60) cubo -> CUBO ASIGNACION PARENTESISCI . valor PARENTESISCD PUNTOCOMA
    (74) valor -> . NUMERO
    (75) valor -> . bool
    (77) valor -> . valor valor2
    (82) valor -> . lista
    (91) bool -> . TRUE
    (92) bool -> . FALSE
    (97) lista -> . PARENTESISCI valor PARENTESISCD

    NUMERO          shift and go to state 26
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    PARENTESISCI    shift and go to state 31

    valor                          shift and go to state 88
    bool                           shift and go to state 27
    lista                          shift and go to state 28

state 64

    (59) dimCol -> DIMCOLUMNAS ASIGNACION NUMERO PUNTOCOMA .

    CUBO            reduce using rule 59 (dimCol -> DIMCOLUMNAS ASIGNACION NUMERO PUNTOCOMA .)


state 65

    (44) parametros -> ID0 COMA . parametros
    (42) parametros -> . ID0
    (43) parametros -> . empty
    (44) parametros -> . ID0 COMA parametros
    (39) empty -> .

    ID0             shift and go to state 59
    PARENTESISD     reduce using rule 39 (empty -> .)

    parametros                     shift and go to state 89
    empty                          shift and go to state 61

state 66

    (31) rutina -> PROCEDURE ID0 PARENTESISI parametros PARENTESISD . LLAVEI statements LLAVED PUNTOCOMA

    LLAVEI          shift and go to state 90


state 67

    (38) factor -> PARENTESISI . expression PARENTESISD
    (11) expression -> . expression SUMA term
    (12) expression -> . expression RESTA term
    (30) expression -> . RESTA term
    (32) expression -> . term
    (17) term -> . term MULTIPLICACION factor
    (19) term -> . term DIVISION factor
    (21) term -> . term DIVISIONE factor
    (25) term -> . term MODULO factor
    (28) term -> . term EXPONENCIAL factor
    (34) term -> . factor
    (36) factor -> . NUMERO
    (38) factor -> . PARENTESISI expression PARENTESISD

    RESTA           shift and go to state 78
    NUMERO          shift and go to state 81
    PARENTESISI     shift and go to state 67

    expression                     shift and go to state 91
    term                           shift and go to state 77
    factor                         shift and go to state 87

state 68

    (14) main -> PROCEDURE MAIN PARENTESISI PARENTESISD LLAVEI statements . LLAVED PUNTOCOMA
